--- a/index.html
+++ b/index.html
@@ -15,32 +15,26 @@
               'dominant': '#ef4444', // red-500
               'influent': '#f59e0b', // amber-500
               'stable': '#10b981', // emerald-500
-<!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><clipPath id='c'><rect width='100' height='100' rx='20' ry='20'/></clipPath></defs><g clip-path='url(%23c)'><rect x='0' y='0' width='48' height='48' fill='%23ef4444'/><rect x='52' y='0' width='48' height='48' fill='%23f59e0b'/><rect x='0' y='52' width='48' height='48' fill='%233b82f6'/><rect x='52' y='52' width='48' height='48' fill='%2310b981'/></g></svg>" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DISC Fácil - Perfil Comportamental</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              'dominant': '#ef4444', // red-500
-              'influent': '#f59e0b', // amber-500
-              'stable': '#10b981', // emerald-500
               'compliant': '#3b82f6', // blue-500
             },
           },
         },
       }
     </script>
-    <script type="module" src="/index.tsx"></script>
+  <script type="importmap">
+{
+  "imports": {
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "vite": "https://aistudiocdn.com/vite@^7.2.2"
+  }
+}
+</script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
